Changelog
=========

1.3.8 (unreleased)
------------------

* Added try-except block around getting helper
  when reindexing. This is not strictly our issue
  but I still consider it a stability improvement.
  [tmog]

* Remove deprecation warning on Zope 2.13: 
  Products.ATReferenceBrowserWidget moved to archetypes.referencebrowserwidget
  DTMLFile is deprecated. import from App.special_dtml instead
  [toutpt]

1.3.7 (2011-11-16)
------------------

* Added conditional include of CMFCore permisssions.zcml for Plone 4.1 support.
  [thet, tom_gross]
  
* Added addional renderer, which respects effective and expiry-date.
  [tom_gross]
  
* Restored Topic summary-view for Plone 3
  [tom_gross]

1.3.6 (2011-07-05)
------------------

* Updated set of catch exceptions; location error exception is 2.10+
  only. We fall back to attribute error. Also, narrow list to the
  exceptions likely to be raised because of environment errors.
  [malthe]

1.3.5 (2011-07-04)
------------------

* Catch name, type, value and location errors raised while rendering
  content inside a composition, but display a warning (status
  message).

  This allows a user to change to an alternative layout in the case
  that the system is broken.
  [malthe]

* Changed alised topic views such that only the initial batch is shown
  (without pagination). In addition, the headings in these views are
  now clickable and lead to the referenced topic.

  This makes topic views less busy in the general case where an
  already existing topic is shown.

  Note that topics created inside the composition retain their
  existing behavior.
  [malthe]

1.3.4 (2011-07-01)
------------------

* Fixed topic templates so that H2-headings are not marked with
  'documentFirstHeading'.
  [malthe]

1.3.3 (2011-07-01)
------------------

* Fixed topic templates so that headings used are ``H2``, not ``H1``.
  [malthe]

1.3.2 (2011-07-01)
------------------

* Fixed a broken expression in the ``topic_album`` template.