@@ -1,0 +1,44 @@
+<tal:manager replace="structure provider:collage.ContentManager" />
+
+<tal:variables define="plone_view context/@@plone;
+                       toLocalizedTime nocall: plone_view/toLocalizedTime;
+                       isAnon view/isAnon;
+                       mtool view/mtool;
+                       portal_url view/portal_url;
+                       normalizeString view/normalizeString;
+                       site_properties view/site_properties">
+
+  <div class="standard-topic"
+       tal:condition="context/results">
+
+    <a tal:omit-tag="not: view/isAlias"
+       tal:attributes="href context/absolute_url">
+       
+      <h2 metal:define-macro="title"
+          tal:condition="context/Title">
+        <span metal:define-slot="inside"
+              tal:replace="context/Title">title</span>
+      </h2>
+    </a>
+
+    <p class="description-topic">
+      <span metal:define-macro="description"
+            tal:condition="context/Description">
+        <span metal:define-slot="inside"
+              tal:replace="context/Description">description</span>
+      </span>
+    </p>
+
+    <tal:listing i18n:domain="plone"
+                 define="templateId string:folder_summary_view">
+      <metal:listing-macro use-macro="context/standard_view/macros/listing" />
+
+    </tal:listing>
+
+    <a tal:attributes="href context/absolute_url"
+       i18n:domain="plone" i18n:translate="box_morelink">More...</a>
+
+  </div>
+
+</tal:variables>
+
