@@ -1,0 +1,91 @@
+<tal:manager replace="structure provider:collage.ContentManager" />
+
+<tal:variables define="plone_view context/@@plone;
+                       toLocalizedTime nocall: plone_view/toLocalizedTime;
+                       isAnon view/isAnon;
+                       mtool view/mtool;
+                       portal_url view/portal_url;
+                       normalizeString view/normalizeString;
+                       site_properties view/site_properties">
+
+  <div class="standard-topic"
+       tal:condition="context/results">
+
+    <a tal:omit-tag="not: view/isAlias"
+       tal:attributes="href context/absolute_url">
+       
+      <h2 metal:define-macro="title"
+          tal:condition="context/Title">
+        <span metal:define-slot="inside"
+              tal:replace="context/Title">title</span>
+      </h2>
+    </a>
+
+    <p class="description-topic">
+      <span metal:define-macro="description"
+            tal:condition="context/Description">
+        <span metal:define-slot="inside"
+              tal:replace="context/Description">description</span>
+      </span>
+    </p>
+
+
+    <tal:listing i18n:domain="plone"
+                 define="templateId string:folder_summary_view">
+  
+      <metal:listing-macro use-macro="context/standard_view/macros/listing">
+  
+       <metal:entry fill-slot="entry">
+
+        <div class="tileItem visualIEFloatFix"
+             tal:define="obj item">
+
+            <a href="#"
+                  tal:condition="obj/image|nothing"
+                  tal:attributes="href item/getURL">
+                  <div class="tileImage">
+                  <img src="" alt=""
+                       tal:define="scale obj/@@images"
+                       tal:replace="structure python: scale.scale('image', scale='thumb').tag(css_class='tileImage')" />
+                   </div>
+            </a>
+
+            <h2 class="tileHeadline" metal:define-macro="listitem">
+                <a href="#"
+                   class="summary url"
+                   tal:attributes="href python:item_type in use_view_action and item_url+'/view' or item_url;"
+                   tal:content="item/Title">
+                    Item Title
+                </a>
+            </h2>
+
+            <div metal:use-macro="context/standard_view/macros/document_byline"></div>
+
+            <p class="tileBody" tal:condition="item_description">
+                <span class="description" tal:content="item_description">
+                    description
+                </span>
+            </p>
+
+            <p class="tileFooter">
+                <a href=""
+                   tal:attributes="href python:item_type in use_view_action and item_url+'/view' or item_url;"
+                   i18n:translate="read_more">
+                Read More&hellip;
+                </a>
+            </p>
+
+            <div class="visualClear"><!-- --></div>
+        </div>
+
+       </metal:entry>      
+      </metal:listing-macro>
+    </tal:listing>
+
+    <a tal:attributes="href context/absolute_url"
+       i18n:domain="plone" i18n:translate="box_morelink">More...</a>
+
+  </div>
+
+</tal:variables>
+
