@@ -4,6 +4,9 @@ Changelog
 1.3.8 (unreleased)
 ------------------
 
+* Added views for plone.app.collection: standard and summary for now.
+  [jensens]
+
 * Added try-except block around getting helper
   when reindexing. This is not strictly our issue
   but I still consider it a stability improvement.
